feat: Enhance New Material Items Form and add App Header Popup and Grid functionalities
- Refactored NewMaterialItemsForm to improve error handling and data preparation for submission.
- Added pagination and search functionality to select boxes in the New Material Items Form.
- Introduced AppHeaderPopup class for managing quotation selection with improved UI and data handling.
- Created AppGrid class to manage grid functionalities, including item addition, deletion, and Excel export.
- Implemented confirmation dialogs for item deletion and improved notification messages.
- Enhanced data loading and grid initialization processes for better performance and user experience.

--- a/GPCS_DMS/appsettings.json
+++ b/GPCS_DMS/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ApiSettings":{
-    "BaseUrl": "https://localhost:7218/api/"
+    "BaseUrl": "https://localhost:7218/api/",
+    "QCSUrl": {
+      "View": "https://ap-ntc2138-qawb/QCS/Quotation/View/",
+      "Service": "https://ap-ntc2138-qawb/QCS/Service/api/"
+    }
   }
 }
