feat: Refactor GridCustomStore for improved API integration and error handling
- Updated GridCustomStore to use private class fields for better encapsulation.
- Enhanced load, insert, update, and remove methods with improved error handling and notifications.
- Added support for custom parameters in API requests.
- Introduced onBeforeAction and onAfterAction callbacks for better control during operations.

feat: Implement GridToolbarManager for dynamic toolbar updates

- Added total count label to the toolbar for displaying record counts.
- Improved toolbar preparation logic to handle loading states.

chore: Add shared grid scripts to _GridScripts.cshtml

- Included necessary JavaScript files for grid functionality.

style: Create grid.css for Japanese Minimalist Grid styles

- Added CSS styles for grid headers, cards, and data grid elements.

feat: Create data item and material grid configurations

- Implemented data item grid configuration with custom columns and data source.
- Created data material grid configuration with necessary fields and validation rules.

feat: Add inventory and item grid configurations

- Developed inventory grid configuration with relevant columns and data handling.
- Created item grid configuration with detailed item attributes and validation.

feat: Introduce grid factory and helper classes

- Implemented GridFactory for creating grids with default options and error handling.
- Added GridHelper for simplifying column creation in grid configurations.

--- a/GPCS_DMS/appsettings.json
+++ b/GPCS_DMS/appsettings.json
@@ -11,6 +11,7 @@
     "QCSUrl": {
       "View": "https://ap-ntc2138-qawb/QCS/Quotation/View/",
       "Service": "https://ap-ntc2138-qawb/QCS/Service/api/"
-    }
+    },
+    "GPCSUrl": "https://localhost:7084/api/"
   }
 }
