feat: Add dashboard application with summary cards, filtering, and grid functionality
- Implemented dashboard layout with CSS styles for containers, headers, summary cards, and filter panels.
- Created JavaScript classes for dashboard functionality including AppDashboard, DashboardService, DashboardRenderer, and configuration management.
- Added role-based summary card rendering and application loading based on user roles.
- Integrated filter controls for searching applications by number, type, and date.
- Developed grid for displaying applications with custom cell templates and toolbar actions.
- Included empty state handling for various scenarios when no applications are available.

--- a/GPCS_DMS/appsettings.json
+++ b/GPCS_DMS/appsettings.json
@@ -6,12 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiSettings":{
+  "ApiSettings": {
     "BaseUrl": "https://localhost:7218/api/",
+    //"BaseUrl": "https://ap-ntc2138-qawb/DMS/GPCS_DataMaintenance/api/",
     "QCSUrl": {
-      "View": "https://ap-ntc2138-qawb/QCS/Quotation/View/",
-      "Service": "https://ap-ntc2138-qawb/QCS/Service/api/"
+      "View": "https://ap-ntc2137-prwb/QCS/Quotation/View/",
+      "Service": "https://ap-ntc2137-prwb/QCS/Service/api/"
     },
-    "GPCSUrl": "https://localhost:7084/api/"
+    //"GPCSUrl": "https://localhost:7084/api/"
+    "GPCSUrl": "https://ap-ntc2138-qawb/DMS/GPCS/api/"
   }
 }
