feat: Implement error handling and user account info retrieval
- Added ErrorController to manage error responses and display custom error pages.
- Created ErrorPageViewModel for structured error information.
- Introduced IAccountInfoService interface and AccountInfoService implementation for fetching user account details.
- Added custom claims transformation to enrich user claims with account information.
- Updated layout and error views for improved user experience.
- Enhanced dashboard and report views with new JavaScript functionalities for data synchronization and workflow visualization.
- Modified appsettings for different environments to manage API endpoints.
- Refactored various JavaScript files for better maintainability and performance.

--- a/GPCS_DMS/appsettings.Development.json
+++ b/GPCS_DMS/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiSettings": {
+    "BaseUrl": "https://ap-ntc2138-qawb/DMS/GPCS_DataMaintenance/api/",
+    "QCSUrl": {
+      "View": "https://ap-ntc2137-prwb/QCS/Quotation/View/",
+      "Service": "https://ap-ntc2137-prwb/QCS/Service/api/"
+    },
+    "GPCSUrl": "https://ap-ntc2138-qawb/DMS/GPCS/api/"
   }
 }
